<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="last selected"
        android:entries="@array/default_for_main_activity"
        android:entryValues="@array/default_for_main_activity_values"
        android:key="default_for_main_activity"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/default_for_main_activity_title" />

    <ListPreference
        android:defaultValue="B"
        android:entries="@array/licence_classes_entries"
        android:entryValues="@array/licence_classes_values"
        android:key="licence_class"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/title_pref_lisence_class" />

    <EditTextPreference
        android:defaultValue="https://data.gov.il/dataset/618dd157-8df3-43e7-bf9a-00974b4919e9/resource/b5bb714b-b2c8-42ca-bc90-9c235863b1dd/download/theoryexamhe_data.xml"
        android:key="update_url"
        android:title="@string/update_url"/>

</PreferenceScreen>
